# ovpn-mana

./: .gitignore  CMakeLists.txt  README.en.md  README.md  ovpn-mana.ini  vcpkg.json
include/: OpenVPNManager.hpp  config.hpp  config.hpp.in  ovpn-mana.hpp  sdk.types.hpp  utils.hpp
src/: OpenVPNManager.cpp  main.cpp  ovpn-mana.cpp
test/: test_client.cpp
